folder structure is done

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <head>
     <title>Predix Seed</title>
     <base href="/">
@@ -18,7 +17,8 @@
     <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
     <link rel="import" href="polymer-loader.vulcanized.html">
-
+    <!-- W3 CSS-->
+    <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 </head>
 
 <body unresolved class="app" data-ng-controller="MainCtrl">
