folder structure is done

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,11 @@
     <link rel="import" href="polymer-loader.vulcanized.html">
     <!-- W3 CSS-->
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+    <style>
+        main {
+            background-color: #fff !important;
+        }
+    </style>
 </head>
 
 <body unresolved class="app" data-ng-controller="MainCtrl">
